Bug 1468524 - Fix instanceof for TypedObject 'struct' instances. r=till

Struct types need to appear to be callable, or some paths through the
engine will not think that they are constructors (since constructors
are callable).

They are not *actually* callable however; the call implementation
always throws.